--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v4",
+  "name": "website",
   "description": "Harsha Srikara Personal Website",
   "version": "1.0.0",
   "author": "Harsha Srikara <harshasrikara@gmail.com>",
